tests/neg-custom-args/captures/leaked-curried.check
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:14:20 ----------------------------------------------------
14 |        () => () => io // error
   |                    ^^
   |(io : Cap^) cannot be referenced here; it is not included in the allowed capture set {} of the self type of class Fuzz
-- [E058] Type Mismatch Error: tests/neg-custom-args/captures/leaked-curried.scala:15:10 -------------------------------
15 |    class Foo extends Box, Pure: // error
   |          ^
   |          illegal inheritance: self type Foo^{io} of class Foo does not conform to self type Pure
   |          of parent trait Pure
   |
   | longer explanation available when compiling with `-explain`
